osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[Union[str, wut]].txt
error: expected simple type in `Union`
--> main.sml:1:16
     |
   1 | Foo: Union[str, wut] = JsonData(path='$.foo')
     |                 ^ got unknown non-generic type `wut`
